# LabVAR

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MAP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: IMAGE_ANALYSIS_PLAN.md  MAP.md  README.md  UX_ADOPTION_MAP.md
.github/workflows/: build.yml  release.yml
landing/: package-lock.json  package.json
landing/src/pages/: index.astro
scripts/: install-macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  image.rs  imaging.rs  lib.rs  main.rs  provenance.rs  pubmed.rs
src/components/: Button.tsx  DataTable.tsx  ErrorBoundary.tsx  Modal.tsx  Workspace.tsx
src/features/aichart/: AiChartWorkspace.tsx
src/features/assays/: AssayWorkspace.tsx
src/features/design/: DesignPanel.tsx  DesignTab.tsx  DesignWorkspace.tsx
src/features/experiments/: DataTab.tsx  ExperimentView.tsx  ExperimentsPanel.tsx  HomeView.tsx  NewExperimentModal.tsx  NotesTab.tsx
src/features/figures/: FiguresWorkspace.tsx
src/features/gel/: GelWorkspace.tsx
src/features/image/: ImageWorkspace.tsx
src/features/inventory/: InventoryPanel.tsx  InventoryView.tsx
src/features/labmath/: LabMathWorkspace.tsx
src/features/notebook/: NotebookWorkspace.tsx
src/features/onboarding/: OnboardingWizard.tsx
src/features/plot/: PlotBuilder.tsx  PlotTab.tsx  PlotWorkspace.tsx
src/features/settings/: SettingsWorkspace.tsx
src/features/stats/: StatsPanel.tsx  StatsTab.tsx
src/lib/: analysisExport.ts  densitometry.ts  exportFile.ts  figurePresets.ts  graph3d.ts  invoke.ts  labStatus.ts  labdata.ts  localStore.ts  ollamaClient.ts  ollamaSetup.ts  sam.ts  stats.ts  userPrefs.ts  utif.d.ts
src/shell/: MainPanel.tsx  Sidebar.tsx  TopBar.tsx  index.ts
src/store/: useAppStore.ts
