[package]
name = "labvar"
version = "0.1.0"
description = "LabVAR — local-first research tool for scientists"
authors = ["LabVAR Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "labvar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# Scientific-TIFF decoding: the `tiff` crate preserves 16-bit / multi-page /
# compressed samples that the browser-side UTIF path mangled. `base64` is used
# to hand the downsampled preview PNG to the frontend as a data URL.
tiff = "0.9"
base64 = "0.22"
